test_scores/negative_dimers/features/Q9Y291.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q9Y291.pkl.xz